{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 176,
  "lineage": "41c52183-a1f4-41cf-a310-227e787338de",
  "resources": [
    {
      "module": "module.NetInfra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:internet-gateway/igw-025b81bc18931a350",
            "id": "igw-025b81bc18931a350",
            "owner_id": "519956516642",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-08d5c95cd81afe5db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.NetInfra.aws_vpc.web_app"
          ]
        }
      ]
    },
    {
      "module": "module.NetInfra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:route-table/rtb-0ed4ce5de02f5bd43",
            "id": "rtb-0ed4ce5de02f5bd43",
            "owner_id": "519956516642",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025b81bc18931a350",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5c95cd81afe5db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "rtb-0ed4ce5de02f5bd43",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_internet_gateway.igw",
            "module.NetInfra.aws_vpc.web_app"
          ]
        }
      ]
    },
    {
      "module": "module.NetInfra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0273d697b0b8cb00e",
            "region": "us-east-1",
            "route_table_id": "rtb-0ed4ce5de02f5bd43",
            "subnet_id": "subnet-0f9ae759cbd99f7b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.NetInfra.aws_internet_gateway.igw",
            "module.NetInfra.aws_route_table.public_route_table",
            "module.NetInfra.aws_subnet.public_subnet",
            "module.NetInfra.aws_vpc.web_app"
          ]
        }
      ]
    },
    {
      "module": "module.NetInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:subnet/subnet-0f9ae759cbd99f7b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ae759cbd99f7b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519956516642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-08d5c95cd81afe5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "subnet-0f9ae759cbd99f7b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_vpc.web_app"
          ]
        }
      ]
    },
    {
      "module": "module.NetInfra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:vpc/vpc-08d5c95cd81afe5db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee0a1249ecc412a2",
            "default_route_table_id": "rtb-0f2597563a480c7a5",
            "default_security_group_id": "sg-00bbae4a38b7da2d5",
            "dhcp_options_id": "dopt-074a8a806319f88b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d5c95cd81afe5db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2597563a480c7a5",
            "owner_id": "519956516642",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-Web-App"
            },
            "tags_all": {
              "Name": "VPC-Web-App"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "vpc-08d5c95cd81afe5db",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.WebAppsAndStorage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:519956516642:instance/i-0d3ba2b60e881bded",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-0d3ba2b60e881bded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-093c07b4b6da76499"
              }
            ],
            "primary_network_interface_id": "eni-093c07b4b6da76499",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-54-227-198-50.compute-1.amazonaws.com",
            "public_ip": "54.227.198.50",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd1dc3a5e0229f93",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9ae759cbd99f7b0",
            "tags": {
              "Name": "Apache-EFS-Reader"
            },
            "tags_all": {
              "Name": "Apache-EFS-Reader"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b34e47b0ac112eed"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "i-0d3ba2b60e881bded",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_subnet.public_subnet",
            "module.NetInfra.aws_vpc.web_app",
            "module.WebAppsAndStorage.aws_efs_file_system.efs_resource",
            "module.WebAppsAndStorage.aws_efs_mount_target.mounting_point",
            "module.WebAppsAndStorage.aws_iam_instance_profile.ec2_profile",
            "module.WebAppsAndStorage.aws_iam_role.ec2_s3_access_role",
            "module.WebAppsAndStorage.aws_security_group.efs_sg",
            "module.WebAppsAndStorage.aws_security_group.web_servers_sg"
          ]
        }
      ]
    },
    {
      "module": "module.WebAppsAndStorage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:519956516642:instance/i-0e5e4a8edecc66ae7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-0e5e4a8edecc66ae7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0907aad8b3fe83031"
              }
            ],
            "primary_network_interface_id": "eni-0907aad8b3fe83031",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-54-237-5-178.compute-1.amazonaws.com",
            "public_ip": "54.237.5.178",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-010344141914612d5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9ae759cbd99f7b0",
            "tags": {
              "Name": "Web-App-Instance"
            },
            "tags_all": {
              "Name": "Web-App-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b34e47b0ac112eed"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "i-0e5e4a8edecc66ae7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_subnet.public_subnet",
            "module.NetInfra.aws_vpc.web_app",
            "module.WebAppsAndStorage.aws_efs_file_system.efs_resource",
            "module.WebAppsAndStorage.aws_efs_mount_target.mounting_point",
            "module.WebAppsAndStorage.aws_iam_instance_profile.ec2_profile",
            "module.WebAppsAndStorage.aws_iam_role.ec2_s3_access_role",
            "module.WebAppsAndStorage.aws_s3_bucket.S3",
            "module.WebAppsAndStorage.aws_security_group.efs_sg",
            "module.WebAppsAndStorage.aws_security_group.web_servers_sg"
          ]
        }
      ]
    },
    {
      "module": "module.WebAppsAndStorage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:security-group/sg-056f0249cf63e5e6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056f0249cf63e5e6d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b34e47b0ac112eed"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-storage-sg",
            "name_prefix": "",
            "owner_id": "519956516642",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d5c95cd81afe5db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "sg-056f0249cf63e5e6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_vpc.web_app",
            "module.WebAppsAndStorage.aws_security_group.web_servers_sg"
          ]
        }
      ]
    },
    {
      "module": "module.WebAppsAndStorage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_servers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519956516642:security-group/sg-0b34e47b0ac112eed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b34e47b0ac112eed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-servers-sg",
            "name_prefix": "",
            "owner_id": "519956516642",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d5c95cd81afe5db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "519956516642",
            "id": "sg-0b34e47b0ac112eed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.NetInfra.aws_vpc.web_app"
          ]
        }
      ]
    }
  ]
}